--- a/logstash-cef-adx/logstash.conf
+++ b/logstash-cef-adx/logstash.conf
@@ -1,47 +1,152 @@
 input {
+	tcp {
+		port => 5514
+		type => syslog
+		tags => [ "PAN-OS_syslog" ]
+	}
+	udp {
+		port => 5514
+		type => syslog
+		tags => [ "PAN-OS_syslog" ]
+	}
+}
 
-  tcp {
+filter {
+    if "PAN-OS_syslog" in [tags] {
 
-    port => 5514
+        # Log types are "TRAFFIC", "THREAT", "CONFIG", "SYSTEM" and "HIP-MATCH".
 
-    type => syslog
+        # Traffic log fields: https://docs.paloaltonetworks.com/pan-os/9-0/pan-os-admin/monitoring/use-syslog-for-monitoring/syslog-field-descriptions/traffic-log-fields.html
+        if ([message] =~ /TRAFFIC/) {
+            csv {
+                source => "message"
+                columns => [ 
+                    "FUTURE_USE", "ReceiveTime", "SerialNumber", "Type", "Threat_ContentType", "FUTURE_USE",
+                    "GeneratedTime", "SourceIP", "DestinationIP", "NATSourceIP", "NATDestinationIP", "RuleName",
+                    "SourceUser", "DestinationUser", "Application", "VirtualSystem", "SourceZone", "DestinationZone",
+                    "InboundInterface", "OutboundInterface", "LogAction", "FUTURE_USE", "SessionID",
+                    "RepeatCount", "SourcePort", "DestinationPort", "NATSourcePort", "NATDestinationPort", "Flags",
+                    "Protocol", "Action", "Bytes", "BytesSent", "BytesReceived", "Packets", "StartTime", "ElapsedTime",
+                    "Category", "FUTURE_USE", "SequenceNumber", "ActionFlags", "SourceLocation", 
+                    "DestinationLocation", "FUTURE_USE", "PacketsSent", "PacketsReceived", "SessionEndReason",
+                    "DeviceGroupHierarchyLevel1", "DeviceGroupHierarchyLevel2", "DeviceGroupHierarchyLevel3",
+                    "DeviceGroupHierarchyLevel4", "VirtualSystemName", "DeviceName", "ActionSource", "SourceVMUUID",
+                    "DestinationVMUUID", "TunnelID_IMSI", "MonitorTag_IMEI", "ParentSessionID", "ParentStartTime",
+                    "TunnelType", "SCTPAssociationID", "SCTPChunks", "SCTPChunksSent", "SCTPChunksReceived"
+                ]
+            }
 
-    codec => cef
+            mutate {
+                convert => [ "Bytes", "integer" ]
+                convert => [ "BytesReceived", "integer" ]
+                convert => [ "BytesSent", "integer" ]
+                convert => [ "ElapsedTime", "integer" ]
+                convert => [ "GeoIP.dma_code", "integer" ]
+                convert => [ "GeoIP.latitude", "float" ]
+                convert => [ "GeoIP.longitude", "float" ]
+                convert => [ "NATDestinationPort", "integer" ]
+                convert => [ "NATSourcePort", "integer" ]
+                convert => [ "Packets", "integer" ]
+                convert => [ "PacketsReceived", "integer" ]
+                convert => [ "PacketsSent", "integer" ]
+                convert => [ "SequenceNumber", "integer" ]
 
-  }
+                add_tag => [ "PAN-OS_traffic"]
+            }
+        }
 
-  udp {
+        # Threat log fields: https://docs.paloaltonetworks.com/pan-os/9-0/pan-os-admin/monitoring/use-syslog-for-monitoring/syslog-field-descriptions/threat-log-fields.html
+        else if ([message] =~ /THREAT/) {
+            csv {
+                source => "message"
+                columns => [ 
+                    "FUTURE_USE", "ReceiveTime", "SerialNumber", "Type", "Threat_ContentType", "FUTURE_USE",
+                    "GeneratedTime", "SourceIP", "DestinationIP", "NATSourceIP", "NATDestinationIP", "RuleName", 
+                    "SourceUser", "DestinationUser", "Application", "VirtualSystem", "SourceZone", "DestinationZone",
+                    "InboundInterface", "OutboundInterface", "LogAction", "FUTURE_USE", "SessionID",
+                    "RepeatCount", "SourcePort", "DestinationPort", "NATSourcePort", "NATDestinationPort", "Flags",
+                    "Protocol", "Action", "URL_Filename", "ThreatID", "Category", "Severity", "Direction",
+                    "SequenceNumber", "ActionFlags", "SourceLocation", "DestinationLocation", "FUTURE_USE", 
+                    "ContentType", "PCAP_ID", "FileDigest", "Cloud", "URLIndex", "UserAgent", "FileType",
+                    "X-Forwarded-For", "Referer", "Sender", "Subject", "Recipient", "ReportID",
+                    "DeviceGroupHierarchyLevel1", "DeviceGroupHierarchyLevel2", "DeviceGroupHierarchyLevel3",
+                    "DeviceGroupHierarchyLevel4", "VirtualSystemName", "DeviceName", "FUTURE_USE", "SourceVMUUID",
+                    "DestinationVMUUID", "HTTPMethod", "TunnelID_IMSI", "MonitorTag_IMEI", "ParentSessionID", 
+                    "ParentStartTime", "TunnelType", "ThreatCategory", "ContentVersion", "FUTURE_USE" , 
+                    "SCTPAssociationID", "PayloadProtocolID", "HTTPHeaders" 
+                ]
+            }
 
-    port => 5514
+            mutate {
+                convert => [ "GeoIP.dma_code", "integer" ]
+                convert => [ "GeoIP.latitude", "float" ]
+                convert => [ "GeoIP.longitude", "float" ]
+                convert => [ "NATDestinationPort", "integer" ]
+                convert => [ "NATSourcePort", "integer" ]
+                convert => [ "SequenceNumber", "integer" ]
+      
+                add_tag => ["PAN-OS_threat"]
+            }
+        }
 
-    type => syslog
+        mutate {
+            # Original message has been fully parsed, so remove it.
+            remove_field => [ "message" ]
+        }
 
-    codec => cef
+        # Geolocate logs that have SourceIP if that SourceIP is a non-RFC1918 address
+        if [SourceIP] and [SourceIP] !~ "(^127\.0\.0\.1)|(^10\.)|(^172\.1[6-9]\.)|(^172\.2[0-9]\.)|(^172\.3[0-1]\.)|(^192\.168\.)|(^169\.254\.)" {
+            geoip {
+               source => "SourceIP"
+               target => "SourceIPGeo"
+          }
 
-  }
+            # Delete 0,0 in SourceIPGeo.location if equal to 0,0
+            if ([SourceIPGeo.location] and [SourceIPGeo.location] =~ "0,0") {
+                mutate {
+                    replace => [ "SourceIPGeo.location", "" ]
+                }
+            }
+        }
 
+        # Geolocate logs that have DestinationIP and if that DestinationIP is a non-RFC1918 address
+        if [DestinationIP] and [DestinationIP] !~ "(^127\.0\.0\.1)|(^10\.)|(^172\.1[6-9]\.)|(^172\.2[0-9]\.)|(^172\.3[0-1]\.)|(^192\.168\.)|(^169\.254\.)" {
+            geoip {
+                source => "DestinationIP"
+                target => "DestinationIPGeo"
+            }
+      
+            # Delete 0,0 in DestinationIPGeo.location if equal to 0,0
+            if ([DestinationIPGeo.location] and [DestinationIPGeo.location] =~ "0,0") {
+                mutate {
+                    replace => [ "DestinationIPGeo.location", "" ]
+                }
+            }
+        }
+
+        # Takes the 5-tuple of source address, source port, destination address, destination port, and protocol and does a SHA1 hash to fingerprint the flow.  This is a useful
+        # way to be able to do top N terms queries on flows, not just on one field.
+        if [SourceIP] and [DestinationIP] {
+            fingerprint {
+                concatenate_sources => true
+                method => "SHA1"
+                key => "logstash"
+                source => [ "SourceIP", "SourcePort", "DestinationIP", "DestinationPort", "Protocol" ]
+            }
+        }
+
+    }
 }
 
 output {
-
     kusto {
-
             path => "/tmp/kusto/%{+YYYY-MM-dd-HH-mm-ss}.txt"
-
             ingest_url => "<adx-ingest-url>"
-
             app_id => "<app id>"
-
             app_key => "<app secret key>"
-
             app_tenant => "<app tenantid>"
-
             database => "<ADX Database>"
-
             table => "CommonSecurityLog"
-
             json_mapping => "CEF" 
-
     }
-
 }
